<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MuudatusedActivity">

    <TextView
        android:id="@+id/Info1"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/aine2"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day" />

    <TextView
        android:id="@+id/Info2"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/groupInfo2"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Info1"
        app:layout_constraintTop_toBottomOf="@+id/day" />

    <TextView
        android:id="@+id/groupHeader"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/groupChanges"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupHeader" />

    <Spinner
        android:id="@+id/day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/SubjectText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:text="@string/AineInfo"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintBottom_toTopOf="@+id/back2"
        app:layout_constraintEnd_toStartOf="@+id/InfoText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Info1" />

    <TextView
        android:id="@+id/InfoText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:text="@string/KlassInfo"
        android:textAlignment="viewEnd"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintBottom_toTopOf="@+id/preferences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/SubjectText"
        app:layout_constraintTop_toBottomOf="@+id/Info2" />

    <Button
        android:id="@+id/back2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:onClick="onBack"
        android:text="@string/tagasi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/preferences"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:onClick="OnNextActivity"
        android:text="@string/eelistused"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back2" />
</androidx.constraintlayout.widget.ConstraintLayout>