<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EelistusedActivity"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <Switch
        android:id="@+id/notificationsSwitch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/notificationsText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/UIText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/uitext"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="20sp"
        android:textStyle="normal"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/UIDropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationsSwitch" />

    <Spinner
        android:id="@+id/UIDropdown"
        android:layout_width="164dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/UIText"
        app:layout_constraintTop_toBottomOf="@+id/notificationsSwitch" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="onBack"
        android:text="@string/tagasi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>